--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="/" class='logo'>
+            <a href="./index.html" class='logo'>
                 <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
             </a>
 
@@ -30,14 +30,14 @@
                 <li><a href="" class="site-nav link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class='site-nav'>
-            <li>
-                <a href="mailto:info@example.com" class='site-nav contact'>
+        <ul class='contact-list'>
+            <li class='contact-item'>
+                <a href="mailto:info@example.com" class='contact'>
                     info@example.com
                 </a>
             </li>
-            <li>
-                <a href="tel:+380991111111" class='site-nav contact'>
+            <li class='contact-item'>
+                <a href="tel:+380991111111" class='contact'>
                     +38 099 111 11 11
                 </a>
             </li>
@@ -54,106 +54,106 @@
             <button type="button" class='hero-button'>Заказать услугу</button>
         </section>
 
-        <section class='section'>
+        <section class='section advantage'>
             <!-- Преимущества -->
-            <h2 class='section title'>
+            <h2 class='advantage title'>
                 Преимущества
             </h2>
 
-            <ul class= 'section-list'>
-                <li>
-                    <h3 class='section-list title'>
+            <ul class= 'advantage-list'>
+                <li class='advantage-item'>
+                    <h3 class='advantage subtitle'>
                         Внимание к деталям
                     </h3>
-                    <p class='section-list text'>
+                    <p class='advantage text'>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
-                <li>
-                    <h3 class='section-list title'>
+                <li class='advantage-item'>
+                    <h3 class='advantage subtitle'>
                         Пунктуальность
                     </h3>
-                    <p class='section-list text'>
+                    <p class='advantage text'>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
-                <li>
-                    <h3 class='section-list title'>
+                <li class='advantage-item'>
+                    <h3 class='advantage subtitle'>
                         Планирование
                     </h3>
-                    <p class='section-list text'>
+                    <p class='advantage text'>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
-                <li>
-                    <h3 class='section-list title'>
+                <li class='advantage-item'>
+                    <h3 class='advantage subtitle'>
                         Современные технологии
                     </h3>
-                    <p class='section-list text'>
+                    <p class='advantage text'>
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section class='section'>
-            <h2 class='section title'>
+        <section class='section our-work'>
+            <h2 class='our-work title'>
                 Чем мы занимаемся
             </h2>
 
-            <ul>
-                <li>
-                    <img src="./images/index-images/img.jpg" alt='Работа за планшетом' width="370">
+            <ul class='ourwork-list'>
+                <li class='ourwork-item'>
+                    <img src="./images/index-images/img.jpg" alt='Работа за планшетом' width="370" class='ourwork-images'>
+                </li >
+                <li class='ourwork-item'>
+                    <img src="./images/index-images/img1.jpg" alt='Работа за ноутбуком' width="370" class='ourwork-images'>
                 </li>
-                <li>
-                    <img src="./images/index-images/img1.jpg" alt='Работа за ноутбуком' width="370">
-                </li>
-                <li>
-                    <img src="./images/index-images/img2.jpg" alt='Работа за планшетом' width="370">
+                <li class='ourwork-item'>
+                    <img src="./images/index-images/img2.jpg" alt='Работа за планшетом' width="370" class='ourwork-images'>
                 </li>
             </ul>
         </section>
 
         <!-- Наша команда -->
         <section class='section ourteam'>
-            <h2 class='section title'>
+            <h2 class='ourteam title'>
                 Наша команда
             </h2>
 
-            <ul class='section-list'>
-                <li>
-                    <img src="./images/index-images/img3.jpg" alt='Фото Игоря' width="270">
-                    <h3 class='section-list title ourteam'>
+            <ul class='ourteam-list'>
+                <li class='ourteam-item'>
+                    <img src="./images/index-images/img3.jpg" alt='Фото Игоря' width="270" class='ourteam-immages'>
+                    <h3 class='ourteam subtitle'>
                         Игорь Демьяненко
                     </h3>
-                    <p>
+                    <p class='ourteam text'>
                         Product Designer
                     </p>
                 </li>
-                <li>
-                    <img src="./images/index-images/img4.jpg" alt='Фото Ольги' width="270">
-                    <h3 class='section-list title ourteam'>
+                <li class='ourteam-item'>
+                    <img src="./images/index-images/img4.jpg" alt='Фото Ольги' width="270" class='ourteam-images'>
+                    <h3 class='ourteam subtitle'>
                         Ольга Репина
                     </h3>
-                    <p class='section-list text ourteam'>
+                    <p class='ourteam text'>
                         Frontend Developer
                     </p>
                 </li>
-                <li>
-                    <img src="./images/index-images/img5.jpg" alt='Фото Николая' width="270">
-                    <h3 class='section-list title ourteam'>
+                <li class='ourteam-item'>
+                    <img src="./images/index-images/img5.jpg" alt='Фото Николая' width="270" class='ourteam-images'>
+                    <h3 class='ourteam subtitle'>
                         Николай Тарасов
                     </h3>
-                    <p class='section-list text ourteam'>
+                    <p class='ourteam text'>
                         Marketing
                     </p>
                 </li>
-                <li>
-                    <img src="./images/index-images/img6.jpg" alt='Фото Михаила' width="270">
-                    <h3 class='section-list title ourteam'>
+                <li class='ourteam-item'>
+                    <img src="./images/index-images/img6.jpg" alt='Фото Михаила' width="270" class='ourteam-images'>
+                    <h3 class='ourteam subtitle'>
                         Михаил Ермаков
                     </h3>
-                    <p class='section-list text ourteam'>
+                    <p class='ourteam text'>
                         UI Designer
                     </p>
                 </li>
@@ -163,22 +163,21 @@
 
     <!-- Футер -->
     <footer>
-        <a href="/" class='logo footer'>
+        <a href="./index.html" class='logo footer'>
             <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
         </a>
-        <address class=''>
-            
-            <ul >
-                <li>
-                    <a href="/" class="address">г. Киев, пр-т Леси Украинки, 26</a>
+        <address class='address'>
+            <ul class='address-list' >
+                <li class='address-item'>
+                    <a href="/" class="address-map">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
-                    <a href="mailto:info@example.com" class='contact'>
+                <li class='address-item'>
+                    <a href="mailto:info@example.com" class='footer contact'>
                         info@example.com
                     </a>
                 </li>
-                <li>
-                    <a href="tel:+380991111111" class='contact'>
+                <li class='address-item'>
+                    <a href="tel:+380991111111" class='footer contact'>
                         +38 099 111 11 11
                     </a>
                 </li>
