--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header>
         <nav>
             <a href="./index.html" class='logo'>
-                <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
+                <span lang='en' class='logo logo-part'>Web</span><span lang='en'>Studio</span>
             </a>
 
             <ul class='site-nav'>
-                <li><a href="./index.html" class="site-nav link current" >Студия</a></li>
-                <li><a href="./portfolio.html" class="site-nav link">Портфолио</a></li>
-                <li><a href="" class="site-nav link">Контакты</a></li>
+                <li><a href="./index.html" class="nav-link current" >Студия</a></li>
+                <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li><a href="" class="nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class='contact-list'>
@@ -54,50 +54,50 @@
             <button type="button" class='hero-button'>Заказать услугу</button>
         </section>
 
-        <section class='section advantage'>
+        <section class='advantage-section'>
             <!-- Преимущества -->
-            <h2 class='advantage title'>
+            <h2 class='advantage-title title visually-hidden '>
                 Преимущества
             </h2>
 
             <ul class= 'advantage-list'>
                 <li class='advantage-item'>
-                    <h3 class='advantage subtitle'>
+                    <h3 class='advantage-subtitle subtitle'>
                         Внимание к деталям
                     </h3>
-                    <p class='advantage text'>
+                    <p class='advantage-text text'>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li class='advantage-item'>
-                    <h3 class='advantage subtitle'>
+                    <h3 class='advantage-subtitle subtitle'>
                         Пунктуальность
                     </h3>
-                    <p class='advantage text'>
+                    <p class='advantage-text text'>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li class='advantage-item'>
-                    <h3 class='advantage subtitle'>
+                    <h3 class='advantage-subtitle subtitle'>
                         Планирование
                     </h3>
-                    <p class='advantage text'>
+                    <p class='advantage-text text'>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li class='advantage-item'>
-                    <h3 class='advantage subtitle'>
+                    <h3 class='advantage-subtitle subtitle'>
                         Современные технологии
                     </h3>
-                    <p class='advantage text'>
+                    <p class='advantage-text text'>
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section class='section our-work'>
-            <h2 class='our-work title'>
+        <section class='ourwork-section '>
+            <h2 class='ourwork-title title'>
                 Чем мы занимаемся
             </h2>
 
@@ -115,45 +115,45 @@
         </section>
 
         <!-- Наша команда -->
-        <section class='section ourteam'>
-            <h2 class='ourteam title'>
+        <section class='ourteam-section'>
+            <h2 class='ourteam-title title'>
                 Наша команда
             </h2>
 
             <ul class='ourteam-list'>
                 <li class='ourteam-item'>
                     <img src="./images/index-images/img3.jpg" alt='Фото Игоря' width="270" class='ourteam-immages'>
-                    <h3 class='ourteam subtitle'>
+                    <h3 class='ourteam-subtitle subtitle'>
                         Игорь Демьяненко
                     </h3>
-                    <p class='ourteam text'>
+                    <p class='ourteam-text text'>
                         Product Designer
                     </p>
                 </li>
                 <li class='ourteam-item'>
                     <img src="./images/index-images/img4.jpg" alt='Фото Ольги' width="270" class='ourteam-images'>
-                    <h3 class='ourteam subtitle'>
+                    <h3 class='ourteam-subtitle subtitle'>
                         Ольга Репина
                     </h3>
-                    <p class='ourteam text'>
+                    <p class='ourteam-text text'>
                         Frontend Developer
                     </p>
                 </li>
                 <li class='ourteam-item'>
                     <img src="./images/index-images/img5.jpg" alt='Фото Николая' width="270" class='ourteam-images'>
-                    <h3 class='ourteam subtitle'>
+                    <h3 class='ourteam-subtitle subtitle'>
                         Николай Тарасов
                     </h3>
-                    <p class='ourteam text'>
+                    <p class='ourteam-text text'>
                         Marketing
                     </p>
                 </li>
                 <li class='ourteam-item'>
                     <img src="./images/index-images/img6.jpg" alt='Фото Михаила' width="270" class='ourteam-images'>
-                    <h3 class='ourteam subtitle'>
+                    <h3 class='ourteam-subtitle subtitle'>
                         Михаил Ермаков
                     </h3>
-                    <p class='ourteam text'>
+                    <p class='ourteam-text text'>
                         UI Designer
                     </p>
                 </li>
@@ -163,8 +163,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html" class='logo footer'>
-            <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
+        <a href="./index.html" class='logo logo-footer'>
+            <span lang='en' class='logo logo-part'>Web</span><span lang='en'>Studio</span>
         </a>
         <address class='address'>
             <ul class='address-list' >
@@ -172,12 +172,12 @@
                     <a href="/" class="address-map">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class='address-item'>
-                    <a href="mailto:info@example.com" class='footer contact'>
+                    <a href="mailto:info@example.com" class='contact footer-contact'>
                         info@example.com
                     </a>
                 </li>
                 <li class='address-item'>
-                    <a href="tel:+380991111111" class='footer contact'>
+                    <a href="tel:+380991111111" class='contact footer-contact'>
                         +38 099 111 11 11
                     </a>
                 </li>
