--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
     <header>
         <nav>
             <a href="./index.html" class='logo'>
-                <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
+                <span lang='en' class='logo logo-part'>Web</span><span lang='en'>Studio</span>
             </a>
     
             <ul class='site-nav'>
-                <li><a href="./index.html" class="site-nav link ">Студия</a></li>
-                <li><a href="./portfolio.html" class="site-nav link current">Портфолио</a></li>
-                <li><a href="" class="site-nav link">Контакты</a></li>
+                <li><a href="./index.html" class="nav-link">Студия</a></li>
+                <li><a href="./portfolio.html" class="nav-link current">Портфолио</a></li>
+                <li><a href="" class="nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class='contact-list'>
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-        <h2 class='portfolio title'>
+        <h2 class='portfolio-title title visually-hidden '>
             Портфолио
         </h2>
         <ul class='button-list'>
@@ -72,80 +72,82 @@
         <ul class="portfolio-list">
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img.jpg" alt="Технокряк" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
+                <h3 class="portfolio-subtitle subtitle">
                     Технокряк
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Веб-сайт
                 </p>
-            </li         <li class='portfolio-item'>
+            </li>
+            <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(1).jpg" alt="Постер New Orlean vs Golden Star" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Постер New Orlean vs Golden Star
+                <h3 class="portfolio-subtitle subtitle">
+                    Постер <span lang='ru'>New Orlean vs Golden Star</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Дизайн
                 </p>
-            </li         <li class='portfolio-item'>
+            </li>
+            <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(2).jpg" alt="Ресторан Seafood" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Ресторан Seafood
+                <h3 class="portfolio-subtitle subtitle">
+                    Ресторан <span>Seafood</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Приложение
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(3).jpg" alt="Наушники" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Проект Prime
+                <h3 class="portfolio-subtitle subtitle">
+                    Проект <span>Prime</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Маркетинг
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(4).jpg" alt="Фото проектов Boxes" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Проект Boxes
+                <h3 class="portfolio-subtitle subtitle">
+                    Проект <span>Boxes</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Приложение
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(5).jpg" alt="Монитор" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Inspiration has no Borders
+                <h3 class="portfolio-subtitle">
+                    <span>Inspiration has no Borders</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Веб-сайт
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(6).jpg" alt="Разворот издания Limited Edition" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Издание Limited Edition
+                <h3 class="portfolio-subtitle subtitle">
+                    Издание <span>Limited Edition</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Дизайн
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(7).jpg" alt="Фото проекта LAB" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Проект LAB
+                <h3 class="portfolio-subtitle subtitle">
+                    Проект <span>LAB</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Маркетинг
                 </p>
             </li>
             <li class='portfolio-item'>
                 <img src="./images/portfolio-images/img(8).jpg" alt="Ноутбук" width="370" class='portgolio-images'>
-                <h3 class="portfolio subtitle">
-                    Growing Business
+                <h3 class="portfolio-subtitle subtitle">
+                    <span>Growing Business</span>
                 </h3>
-                <p class="portfolio text">
+                <p class="portfolio-text text">
                     Приложение
                 </p>
             </li>
@@ -154,8 +156,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html" class='logo footer'>
-            <span lang='en' class='logo part'>Web</span><span lang='en'>Studio</span>
+        <a href="./index.html" class='logo lpgp-footer'>
+            <span lang='en' class='logo logo-part'>Web</span><span lang='en'>Studio</span>
         </a>
         <address class=''>
             <ul class='address-list'>
@@ -163,12 +165,12 @@
                     <a href="/" class="address-map">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class='address-item'>
-                    <a href="mailto:info@example.com" class='footer contact'>
+                    <a href="mailto:info@example.com" class='contact footer-contact'>
                         info@example.com
                     </a>
                 </li>
                 <li class='address-item'>
-                    <a href="tel:+380991111111" class='footer contact'>
+                    <a href="tel:+380991111111" class='contact footer-contact'>
                         +38 099 111 11 11
                     </a>
                 </li>
